# graphrag-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICES.md  README.md  pyproject.toml
.github/workflows/: eval-fast.yml  eval-full.yml  release.yml  test.yml
docs/: graphrag_core_interface_spec.md
docs/superpowers/plans/: 2026-04-11-bb1-document-ingestion.md  2026-04-12-bb2-bb3-extraction-and-graph.md  2026-04-12-bb4-hybrid-search.md  2026-04-12-bb5-bb6-curation-and-registry.md  2026-04-12-bb7-bb8-tools-and-agents.md  2026-04-12-release-readiness.md
docs/superpowers/specs/: 2026-04-11-bb1-document-ingestion-design.md  2026-04-12-bb2-bb3-extraction-and-graph-design.md  2026-04-12-bb4-hybrid-search-design.md  2026-04-12-bb5-bb6-curation-and-registry-design.md  2026-04-12-bb7-bb8-tools-and-agents-design.md  2026-04-12-release-readiness-design.md
eval/baselines/docred@2026-06-10/: 0.1.0.json
eval/baselines/feverous@2026-06-10/: 0.1.0.json
eval/fixtures/docred/: README.md  sample.jsonl
eval/fixtures/feverous/: LICENSE  README.md  sample.jsonl
src/graphrag_core/: __init__.py  _cypher.py  exceptions.py  interfaces.py  models.py
src/graphrag_core/agents/: INTERFACE.md  __init__.py  context.py  orchestrator.py
src/graphrag_core/curation/: INTERFACE.md  __init__.py  detection.py  pipeline.py
src/graphrag_core/eval/: baseline_store.py  cli.py  harness.py  models.py  protocols.py  registry.py  slice_gate.py  tier_one.py
src/graphrag_core/extraction/: INTERFACE.md  __init__.py  engine.py
src/graphrag_core/graph/: INTERFACE.md  (+4 more)
tests/: conftest.py  test_exceptions.py  test_extraction_engine.py  test_interfaces.py  test_llm_anthropic.py  test_llm_base.py  test_llm_factory.py  test_llm_openai.py  test_models.py  test_packaging.py
tests/eval/: test_baseline_store.py  test_cli.py  test_harness.py  test_models.py  test_protocols.py  test_slice_gate.py  test_tier_one.py
tests/test_agents/: test_context.py  test_orchestrator.py
tests/test_contracts/: test_graph_store_contracts.py
tests/test_curation/: test_detection.py  test_pipeline.py
tests/test_extraction/: test_engine.py
tests/test_graph/: test_audit_trail_v060.py  test_flush.py  test_memory.py  test_neo4j.py  test_neo4j_serialization.py
tests/test_ingestion/: test_chunker.py  test_document_node_creation.py  test_parsers.py  test_pipeline.py  test_pipeline_flush.py  test_pipeline_protocol.py
tests/test_integration/: test_ingest_to_graph.py
tests/test_registry/: test_matching.py  test_memory_registry.py
tests/test_retrieval/: __init__.py  test_interface.py
tests/test_search/: test_fusion.py  test_memory.py  test_neo4j_search.py
tests/test_tools/: test_core_tools.py  test_core_tools_temporal.py  test_library.py
(+47 files in other folders)
