[project]
name = "graphrag-core"
version = "0.1.0"
description = "Domain-agnostic Graph RAG framework"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "pypdf>=4.0", "python-docx>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (Neo4j, LLM APIs)",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
neo4j = ["neo4j>=5.0"]
all = ["graphrag-core[anthropic,neo4j]"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
