[project]
name = "graphrag-core"
version = "0.2.0"
description = "Domain-agnostic Graph RAG framework for building governed, auditable Knowledge Graphs"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Dino Celi"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.0", "pypdf>=4.0", "python-docx>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (Neo4j, LLM APIs)",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
neo4j = ["neo4j>=5.0"]
openai = ["openai>=1.0"]
all = ["graphrag-core[anthropic,neo4j,openai]"]

[project.urls]
Homepage = "https://github.com/cdel1/graphrag-core"
Repository = "https://github.com/cdel1/graphrag-core"
Issues = "https://github.com/cdel1/graphrag-core/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
